Fix PDF link on mobile

--- a/components/Resume/Resume.module.scss
+++ b/components/Resume/Resume.module.scss
@@ -55,10 +55,6 @@
 }
 
 @media (min-width: 576px) {        
-    .Resume {
-        top: 0;
-    }
-
     .masthead { 
         flex-direction: column;
         align-items: flex-end;
@@ -91,31 +87,6 @@
 	.photo {
 		margin: 0 0 2rem;
 	}
-
-    .downloadPDF {
-        border-top: 100px solid rgb(89, 89, 89);
-        border-bottom: 100px solid transparent;
-        border-left: 100px solid transparent;
-        position: fixed;
-        right: 0;
-        z-index: 9999;
-        background-color: transparent;
-        width: auto;
-
-        a {
-            position: absolute;
-            top: -100px;
-            right: 0;
-            text-align: right;
-            font-family: arial;
-            display: block;
-            color: white;
-            padding: 0.5rem 0.5rem 0 0;
-            text-decoration: none;
-            margin: 0;
-            width: auto;
-        }
-    }
 }
 
 @media (min-width: 992px) {
@@ -124,6 +95,8 @@
 
         padding: 4rem 0;
         
+        top: 0;
+
         width: 62%;
     }
 
@@ -164,5 +137,30 @@
         flex-direction: row;
 
         padding: 0;
+    }
+
+    .downloadPDF {
+        border-top: 100px solid rgb(89, 89, 89);
+        border-bottom: 100px solid transparent;
+        border-left: 100px solid transparent;
+        position: fixed;
+        right: 0;
+        z-index: 9999;
+        background-color: transparent;
+        width: auto;
+
+        a {
+            position: absolute;
+            top: -100px;
+            right: 0;
+            text-align: right;
+            font-family: arial;
+            display: block;
+            color: white;
+            padding: 0.5rem 0.5rem 0 0;
+            text-decoration: none;
+            margin: 0;
+            width: auto;
+        }
     }
 }
